Création des tables Periode et Anneescolaire

--- a/MCD_Hatterer.ipynb
+++ b/MCD_Hatterer.ipynb
@@ -1961,6 +1961,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rôles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aux 8 relations auquelles le MLD a aboutit vont correspondre 8 tables SQL.  \n",
+    "\n",
+    "La mise à jour de six de ces table nécessite un rôle de gestionnaire de base de données:  \n",
+    " - Discipline ( discipline_id, nom )  \n",
+    " - Enseigner ( #professeur_id, #classe_id, #discipline_id )  \n",
+    " - Professeur ( professeur_id, prenom, nom, titre )  \n",
+    " - Classe ( classe_id, nom, niveau, #annee_id )  \n",
+    " - Eleve ( eleve_id, prénom, nom, genre, #classe_id )  \n",
+    " - Periode ( periode_id, nom )  \n",
+    " - AnneeScolaire ( annee_id, nom )  \n",
+    "\n",
+    "Tandis que les deux dernières nécessitent un rôle d'utilisateur de type enseignant:  \n",
+    " - Evaluation ( evaluation_id, Date_Contrôle, Date_Note_Visible, #discipline_id, #professeur_id, #classe_id, #annee_id, #periode_id )  \n",
+    " - Evaluer ( #evaluation_id, #eleve_id, note )  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Rôle de l'administrateur"
    ]
   },
