--- a/MCD_Hatterer.ipynb
+++ b/MCD_Hatterer.ipynb
@@ -2144,18 +2144,15 @@
    "source": [
     "# code sql\n",
     "CREATE OR replace USER  stil@localhost IDENTIFIED BY 's';                 \n",
-    "GRANT role_gestionnaire\n",
-    "TO stil@localhost;\n",
+    "GRANT role_gestionnaire TO stil@localhost;\n",
     "SET DEFAULT ROLE role_gestionnaire FOR stil@localhost;\n",
     "\n",
     "CREATE OR replace USER  proviseur@localhost IDENTIFIED BY 'p';                 \n",
-    "GRANT role_gestionnaire\n",
-    "TO proviseur@localhost;\n",
+    "GRANT role_gestionnaire TO proviseur@localhost;\n",
     "SET DEFAULT ROLE role_gestionnaire FOR proviseur@localhost;\n",
     "\n",
     "CREATE OR replace USER  noel_gest@localhost IDENTIFIED BY 'noel';                 \n",
-    "GRANT role_gestionnaire\n",
-    "TO noel_gest@localhost;\n",
+    "GRANT role_gestionnaire TO noel_gest@localhost;\n",
     "SET DEFAULT ROLE role_gestionnaire FOR noel_gest@localhost;"
    ]
   },
