selection professeur depuis enseignements

--- a/MCD_Hatterer.ipynb
+++ b/MCD_Hatterer.ipynb
@@ -87,7 +87,7 @@
     "Cependant, ni le nom ni les dates évoquées ne sont pertinents pour identifier l'évaluation. En effet, d'autres professeurs peuvent avoir choisi le même nom, ou le professeur souhaite donner ce nom à une évaluation donnée à une autre classe...\n",
     "On devra utiliser un identifiant unique par exemple (`evaluation_id`) qui sera incrémenté à chaque nouvelle saisie.  \n",
     "De plus, une fois que des évaluations auront été saisies, il faut que les informations qui ont été enregistrées permettent également d'identifier:  \n",
-    " - le professeur qui a réalisé l'évaluation  \n",
+    " - le professeur qui a réalisé l'évaluation (lequel est généralement mais pas forcément celui qui enseigne la discipline à la classe)   \n",
     " - la discipline sur laquelle le contrôle portait  \n",
     " - la classe à qui était destiné le contrôle  \n",
     " - quand il doit être pris en compte (année scolaire, trimestre, semestre...)  "
