--- a/MCD_Hatterer.ipynb
+++ b/MCD_Hatterer.ipynb
@@ -2148,7 +2148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "J'ai défini 3 utilisateurs possédant le rôle  de gestionnaire:"
+    "Dans le scipt `init_gestiondesnotes.sql` j'ai défini 3 utilisateurs possédant le rôle  de gestionnaire:"
    ]
   },
   {
@@ -2175,7 +2175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour être autorisé à se connecter au client, il faut également que l'utilisateur figure dans la table `Administrateur`. Une fois qu’il est connecté, l'interface laisse la possibilité de changer le mot de passe."
+    "Pour être autorisé à se connecter au client `gestionaire.py`, il faut également que l'utilisateur figure dans la table `Administrateur`. Une fois qu’il est connecté, l'interface laisse la possibilité de changer le mot de passe."
    ]
   },
   {
@@ -2183,6 +2183,27 @@
    "metadata": {},
    "source": [
     "## Rôle professeur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Posséder le rôle de professeur donne le droit de se connecter avec le client `client_professeur.py`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les onglets sont les mêmes mais les fonctionnalités offertes sont différentes et les droits d'interaction avec les tables sont différents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans le scipt `init_gestiondesnotes.sql` la procédure `remplir_professeur()` permet de créer automatiquement 50 utilisateurs possédant le rôle  de professeur."
    ]
   },
   {
