--- a/MCD_Hatterer.ipynb
+++ b/MCD_Hatterer.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"112\" view_box=\"0 0 152 112\" width=\"152\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:56:48</desc>\n",
+       "<svg height=\"112\" view_box=\"0 0 152 112\" width=\"152\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:14</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"112\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"152\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -108,7 +108,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"214\" view_box=\"0 0 152 214\" width=\"152\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:56:49</desc>\n",
+       "<svg height=\"214\" view_box=\"0 0 152 214\" width=\"152\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:22</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"214\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"152\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -163,7 +163,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"380\" view_box=\"0 0 539 380\" width=\"539\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:56:52</desc>\n",
+       "<svg height=\"380\" view_box=\"0 0 539 380\" width=\"539\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:23</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"380\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"539\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -323,7 +323,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"128\" view_box=\"0 0 416 128\" width=\"416\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:56:53</desc>\n",
+       "<svg height=\"128\" view_box=\"0 0 416 128\" width=\"416\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:25</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"128\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"416\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -435,7 +435,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"552\" view_box=\"0 0 623 552\" width=\"623\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:56:58</desc>\n",
+       "<svg height=\"552\" view_box=\"0 0 623 552\" width=\"623\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:27</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"552\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"623\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -710,7 +710,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"471\" view_box=\"0 0 726 471\" width=\"726\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:57:03</desc>\n",
+       "<svg height=\"471\" view_box=\"0 0 726 471\" width=\"726\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:28</desc>\n",
        "\n",
        "<rect fill=\"none\" height=\"471\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"726\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -893,7 +893,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"577\" view_box=\"0 0 645 577\" width=\"645\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:57:11</desc>\n",
+       "<svg height=\"577\" view_box=\"0 0 645 577\" width=\"645\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:32</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"577\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"645\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -1264,7 +1264,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"524.0\" view_box=\"0 0 814 524.0\" width=\"814\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:57:22</desc>\n",
+       "<svg height=\"524.0\" view_box=\"0 0 814 524.0\" width=\"814\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:35</desc>\n",
        "\n",
        "<rect fill=\"none\" height=\"524.0\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"814\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -1508,7 +1508,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"577\" view_box=\"0 0 645 577\" width=\"645\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Mon, 31 Aug 2020 21:57:29</desc>\n",
+       "<svg height=\"577\" view_box=\"0 0 645 577\" width=\"645\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:00:40</desc>\n",
        "\n",
        "<rect fill=\"none\" height=\"577\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"645\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -2008,23 +2008,33 @@
     " Cependant, avec un rôle d'enseignant la consultation des tables précédente reste possible.\n",
     " \n",
     " \n",
-    " Aux rôles précédents se rajoute aussi le rôle d'élève donnant le droit à ceux qui le possède de se connecter à la base de donnés pour consultation des notes et des moyennes personnelles.\n"
+    " Aux rôles précédents pourait se rajouter le rôle d'élève donnant le droit à ceux qui le possède de se connecter à la base de donnés pour consultation des notes et des moyennes personnelles.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rôle de gestionnaire"
+    "# Initialisation\n",
+    "Dans le scipt `init_gestiondesnotes.sql` la procédure `initialiser` permet de créer automatiquement 50 utilisateurs possédant le rôle  de professeur et de remplir quelques tables. Il faut la lancer dans mysql avec: `CALL initialiser;`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Posséder le rôle de gestionnaire donne le droit de se connecter avec le client `gestionnaire.py`.\n",
+    "## Rôle de gestionnaire et client gestionnaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connexion\n",
     "\n",
-    "J'ai créé 2 tables supplémentaires pour agrémenter écran d'accueil à la connexion:"
+    "Posséder le rôle de gestionnaire donne le droit de se connecter avec le client `gestionnaire.py` pour cela il faut saisir un login et un mot de passe de gestionnaire. Par exemple `stil` comme login et `s` comme mot de passe.\n",
+    "\n",
+    "Remarque: J'ai créé 2 tables sql supplémentaires pour agrémenter écran d'accueil à la connexion:"
    ]
   },
   {
@@ -2037,7 +2047,7 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"146\" view_box=\"0 0 428 146\" width=\"428\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Sat, 29 Aug 2020 15:46:57</desc>\n",
+       "<svg height=\"146\" view_box=\"0 0 428 146\" width=\"428\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:link=\"http://www.w3.org/1999/xlink\">\\n\\n<desc>Généré par Mocodo 2.3.8 le Tue, 01 Sep 2020 05:21:19</desc>\n",
        "\n",
        "<rect fill=\"#f7f7f7\" height=\"146\" id=\"frame\" stroke=\"none\" stroke-width=\"0\" width=\"428\" x=\"0\" y=\"0\"/>\n",
        "\n",
@@ -2161,21 +2171,39 @@
     "CREATE OR replace USER  stil@localhost IDENTIFIED BY 's';                 \n",
     "GRANT role_gestionnaire TO stil@localhost;\n",
     "SET DEFAULT ROLE role_gestionnaire FOR stil@localhost;\n",
+    "GRANT ALL ON *.* TO stil@localhost WITH GRANT OPTION; \n",
     "\n",
     "CREATE OR replace USER  proviseur@localhost IDENTIFIED BY 'p';                 \n",
     "GRANT role_gestionnaire TO proviseur@localhost;\n",
     "SET DEFAULT ROLE role_gestionnaire FOR proviseur@localhost;\n",
+    "GRANT ALL ON *.* TO proviseur@localhost WITH GRANT OPTION; \n",
     "\n",
     "CREATE OR replace USER  noel_gest@localhost IDENTIFIED BY 'noel';                 \n",
     "GRANT role_gestionnaire TO noel_gest@localhost;\n",
-    "SET DEFAULT ROLE role_gestionnaire FOR noel_gest@localhost;"
+    "SET DEFAULT ROLE role_gestionnaire FOR noel_gest@localhost;\n",
+    "GRANT ALL ON *.* TO noel_gest@localhost WITH GRANT OPTION; "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour être autorisé à se connecter au client `gestionaire.py`, il faut également que l'utilisateur figure dans la table `Administrateur`. Une fois qu’il est connecté, l'interface laisse la possibilité de changer le mot de passe."
+    "Pour être autorisé à se connecter au client `gestionaire.py`, il faut également que l'utilisateur figure dans la table `Administrateur`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Une fois connecté\n",
+    "Une fois qu’il est connecté, l'interface laisse la possibilité de changer le mot de passe. Cela se passe dans le premier onglet intitulé « Mon compte ». Il y a sept onglets:\n",
+    "- **Mon compte** avec des renseignements personnels concernant l'utilisateur connecté.  \n",
+    "- **Disciplines** avec 10 disciplines enregistrées et la possibilité d'en saisir d'autres.  \n",
+    "- **Professeurs** avec 50 professeurs enregistés et la possibilité d'en ajouter. Pour enregistrer un nouveau professeur grace au client gestionnaire, le mot de passe `root` sera demandé.  \n",
+    "- **Élèves** avec des élèves enregistés et la possibilité d'en ajouter.   \n",
+    "- **Classes** même principe  \n",
+    "- **Enseignements** on sélectionne un professeur, une classe et une discipline et on définit un enseignement.  \n",
+    "- **Périodes** années scolaires, trimestres, semestres..."
    ]
   },
   {
@@ -2189,29 +2217,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Posséder le rôle de professeur donne le droit de se connecter avec le client `client_professeur.py`."
+    "Posséder le rôle de professeur donne le droit de se connecter avec le client `client_professeur.py`. Par exemple `prenom001prof001` peut se connecter avec le mot de passe 'p'."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les onglets sont les mêmes mais les fonctionnalités offertes sont différentes et les droits d'interaction avec les tables sont différents."
+    "Les onglets du client professeur sont les mêmes que ceux du client gestionnaire avec un onglet Évaluations en plus. Par contre, les fonctionnalités offertes sont différentes et les droits d'interaction avec les tables sont différents."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans le scipt `init_gestiondesnotes.sql` la procédure `remplir_professeur()` permet de créer automatiquement 50 utilisateurs possédant le rôle  de professeur."
+    "Il est important de comprendre que les données affichées dépendront des sélections qui seront faites. Par exemple, les moyennes affichées dans le client sont fonction des sélections qui sont faites (professeur, discipline, période)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Des fenêtres popup sont là pour guider l'utilisateur des deux clients."
+   ]
   }
  ],
  "metadata": {
